
The step definitions for such multiline steps must define an extra block argument for the argument:

  Given /the following people exist:/ do |people_table|
    # people_table is of type Cucumber::Model::Table
    # See RDoc for more info
  end

  Then /I should see:/ do |string|
    # string is a plain old ruby String with leading spaces on each line removed
  end

=== New features
* Multiline steps are now supported. (#4, Aslak Hellesøy)
* Tables used to define more examples for a scenario must be prefixed "More Examples" (see languages.yml for other languages)
* Show the file and line number for scenarios as a comment when displaying with the pretty formatter. (#40, Joseph Wilk)
* Show the file for the feature as a comment when displaying with the pretty formatter. (#40, Joseph Wilk)
* Show the feature file and line for pending steps as a comment when displaying with the pretty formatter. (#40, Joseph Wilk)

=== Bugfixes
* ActionMailer delivery_method should not be set to test (#41, Luke Melia)
* Reverse incorrectly ordered args in webrat select step (#43, David Chelimsky)
* Support comments above the first scenario (#31, Aslak Hellesøy)
* Fixed the HTML Formatter to use actual values for FIT table headers (#30, Joseph Wilk)

=== New features
* Added new --out option to make it easier to specify output from Rake and cucumber.yml

== 0.1.7

This release fixes a few bugs and adds some new features. The most notable features are:

=== Calling steps from steps

Step definitions are a little bit closer to having regular method semantics.
You define them, but now you can also call them from other steps. Here is an
example:

  Given /I am logged in as an (.*) named (.*)$/ do |role, name|
    Given "I am registered as #{role}, #{name}, secret"
    When "I log in with #{name}, secret"
  end
  
  Given /I am registered as (.*), (.*), (.*)/ do |role, name, password|
    # (Code removed for brevity)
  end

  When /I log in with (.*), (.*)/ do |name, password|